--- a/src/bio.scss
+++ b/src/bio.scss
@@ -210,5 +210,16 @@ button {
             width: 350px;
             height: 500px;
         }
+
+        .social {
+            gap: 20px;
+
+            div i {
+                box-shadow: 0 0 10px white;
+                font-size: 40px;
+                height: 50px;
+                width: 50px;
+            }
+        }
     }
 }
