--- a/src/bio.scss
+++ b/src/bio.scss
@@ -111,6 +111,7 @@ button {
         border-radius: 50%;
         height: 65px;
         width: 65px;
+        box-shadow: 0 0 10px rgba($color: #fff, $alpha: 0.6);
     }
 
     div i:hover {
